--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,22 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.timer {
+  margin-top: 25px;
+
+  display: flex;
+  gap: 15px;
+  line-height: 1.5;
+  font-weight: 600;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.value {
+  font-size: 55px;
+}
